<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/title_back_beta"
    tools:context="com.example.android.tictactoe.MultiPlayerGame"
    android:fillViewport="true"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/default_player_turn_text"
            android:textSize="22sp"
            android:textColor="#00ff00"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Mplayer1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Player 1"
                android:textAlignment="center"
                android:textColor="#00ff00"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/MDraw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Draw"
                android:textAlignment="center"
                android:textColor="#00ff00"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Mplayer2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Player 2"
                android:textAlignment="center"
                android:textColor="#00ff00"
                android:textSize="22sp" />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <TextView
                android:id="@+id/player1score"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="0"
                android:textColor="#00ff00"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/MDrawscore"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#ff0900"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Player2score"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#00ff00"
                android:textSize="22sp" />

        </LinearLayout>
        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="3"
            android:layout_gravity="center"

            >

            <Button
                android:id="@+id/a11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"

                />
            <Button
                android:id="@+id/a12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/a13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#1a0000"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/a22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/a23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>


            <Button
                android:id="@+id/a31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:onClick="playmove"
                android:textSize="70sp"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"
                />


            <Button
                android:id="@+id/a32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textSize="70sp"
                android:textAlignment="center"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/a33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="70sp"
                android:onClick="playmove"
                android:background="#1a0000"
                android:layout_margin="4dp"
                android:textColor="#ffffff"/>

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="#141a80"
                android:onClick="resetGame"
                android:padding="4dp"
                android:text="@string/restart_game_button_text"
                android:textColor="#ffffff"
                />

            <Button
                android:id="@+id/restartmatch"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="16dp"
                android:background="#0c1594"
                android:onClick="newMatch"
                android:padding="4dp"
                android:text="@string/restart_match_button_text"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>